--- a/project3004-master/pom.xml
+++ b/project3004-master/pom.xml
@@ -7,44 +7,185 @@
     <groupId>com.softwareeng.project</groupId>
     <artifactId>questgame</artifactId>
     <version>1.0-SNAPSHOT</version>
+    
+    <properties>
+    	<junit5.version>5.4.0-M1</junit5.version>
+     	<platform.version>1.2.0</platform.version>
+     	<cucumber.version>4.2.0</cucumber.version>
+     	<javafx.version>12-ea+10</javafx.version>
+  	</properties>
 
     <dependencies>
-        <dependency>
-    		<groupId>junit</groupId>
-    		<artifactId>junit</artifactId>
-    		<version>4.12</version>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+<!-- All JUnit dependencies -->
 		<dependency>
-		    <groupId>log4j</groupId>
-		    <artifactId>log4j</artifactId>
-		    <version>1.2.17</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit5.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit5.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit5.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>${junit5.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>${platform.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-runner</artifactId>
+            <version>${platform.version}</version>
+            <scope>test</scope>
+        </dependency>
+<!-- All TestFX dependencies -->		
+		<dependency>
+    		<groupId>org.testfx</groupId>
+    		<artifactId>openjfx-monocle</artifactId>
+    		<version>1.8.0_20</version>
+    		<scope>test</scope>
+		</dependency>	
+		<dependency>
+    		<groupId>org.hamcrest</groupId>
+    		<artifactId>hamcrest-all</artifactId>
+    		<version>1.3</version>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
+    		<groupId>org.loadui</groupId>
+    		<artifactId>testFx</artifactId>
+    		<version>3.1.2</version>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
+    		<groupId>org.testfx</groupId>
+    		<artifactId>testfx-core</artifactId>
+    		<version>4.0.15-alpha</version>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
+    		<groupId>org.testfx</groupId>
+    		<artifactId>testfx-junit</artifactId>
+    		<version>4.0.15-alpha</version>
+    		<scope>test</scope>
+		</dependency>
+<!-- Log4j dependency -->
+		<dependency>
+    		<groupId>log4j</groupId>
+    		<artifactId>log4j</artifactId>
+    		<version>1.2.17</version>
+		</dependency>
+<!-- All Cucumber dependencies -->
+		<dependency>
+    		<groupId>io.cucumber</groupId>
+    		<artifactId>cucumber-core</artifactId>
+    		<version>${cucumber.version}</version>
+		</dependency>
+  		<dependency>
+    		<groupId>io.cucumber</groupId>
+    		<artifactId>cucumber-java</artifactId>
+    		<version>${cucumber.version}</version>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
+    		<groupId>io.cucumber</groupId>
+    		<artifactId>cucumber-jvm</artifactId>
+    		<version>4.2.0</version>
+    		<type>pom</type>
+		</dependency>		
+		<dependency>
+   			<groupId>io.cucumber</groupId>
+    		<artifactId>cucumber-junit</artifactId>
+    		<version>${cucumber.version}</version>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
+    		<groupId>info.cukes</groupId>
+    		<artifactId>cucumber-jvm-deps</artifactId>
+    		<version>1.0.5</version>
+    		<scope>provided</scope>
+		</dependency>
+<!-- Cucumber Gherkin -->
+		<dependency>
+    		<groupId>io.cucumber</groupId>
+    		<artifactId>gherkin</artifactId>
+    		<version>5.1.0</version>
 		</dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>com.softwareeng.project.client.Main</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
+<!-- Plugins and their configurations -->
+  <build>
+  <pluginManagement>
+  <plugins>
+  	<plugin>
+  		<groupId>com.github.temyers</groupId>
+  		<artifactId>cucumber-jvm-parallel-plugin</artifactId>
+  		<version>5.0.0</version>
+  		<executions>
+    		<execution>
+      			<id>generateRunners</id>
+      			<phase>generate-test-sources</phase>
+      			<goals>
+        			<goal>generateRunners</goal>
+      			</goals>
+    		</execution>
+  		</executions>
+  		<configuration>
+        	<glue>stepDefs</glue>
+        	<outputDirectory>src/test/java/autoGeneratedRunners</outputDirectory>
+        	<featuresDirectory>src/test/resources/features</featuresDirectory>
+        	<cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
+        	<format>json</format>
+        	<parallelScheme>FEATURE</parallelScheme>
+      	</configuration>
+	</plugin>
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+    	<artifactId>maven-compiler-plugin</artifactId>
+    	<version>3.8.0</version>
+		<configuration>
+			<source>1.8</source>
+			<target>1.8</target>
+			<fork>true</fork>
+			<executable>C:\Program Files\Java\jdk1.8.0_201\bin\javac</executable>
+		</configuration>
+	</plugin>
+	<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>3.0.0-M3</version>
+        <executions>
+         <execution>
+             <id>acceptance-test</id>
+             <phase>integration-test</phase>
+             <goals>
+                 <goal>test</goal>
+             </goals>
+    	  </execution>
+        </executions>
+        <configuration>
+    		<forkCount>3</forkCount>
+        	<reuseForks>false</reuseForks>
+    		<includes>
+    			<include>**/*IT.class</include>
+    		</includes>
+    	</configuration>
+      </plugin>
+  </plugins>
+  </pluginManagement>
+  </build>
 </project>
